# market-mind

./: .dockerignore  .env  .gitignore  .mypy.ini  .ruff.toml  Dockerfile  Makefile  README.md  alembic.ini  cli.py  fly.toml  main.py  pyproject.toml  scrapy.cfg
.dockerfiles/: Dockerfile.postgres  docker-compose.yml  redis.conf
.examples/: requests_client.ipynb
alembic/: env.py
alembic/versions/: 3a152b61bffb_add_new_column_ticker.py  b68e920ac317_add_downloaded_col.py
examples/: milvus_local.ipynb  naver_news_list_playwright.py  poc_agent.py  runnable.ipynb  upload_naver_news_articles.py  vdb_example.ipynb  websocket_test_server.py
language_backend/: schemas.py  vectorstore.py
language_backend/service/: llm.py
language_crawler/: commons.py  items.py  pipelines.py
language_crawler/database/: models.py
language_crawler/spiders/: commons.py  naver_news_content.py  naver_research_company_list.py  naver_research_economy_list.py  naver_research_list.py  naver_research_market_info_list.py
mm_backend/: __main__.py  config.py  constant.py  schemas.py  vectorstore.py
mm_backend/database/: models.py  session.py
mm_backend/routers/: api.py
mm_backend/routers/v1/: chat.py  root.py  securities.py
mm_backend/service/: llm.py
mm_crawler/: alembic.ini  commons.py  config.py  constant.py  items.py  middlewares.py  pipelines.py  settings.py
mm_crawler/alembic/: env.py
mm_crawler/alembic/versions/: 065c693f7a96_initial_migration.py  0bd6fbec0ed9_add_columns_articlecontentorm__at.py  124d717f8267_remove_embeddings.py  126a6544371c_change_nullability.py  2c9c354b4c6b_init.py  32a2f47f65e5_.py  3a152b61bffb_add_new_column_ticker.py  52662ec8a6e5_update_relationships.py  5941b683ecd6_add_columns_articlecontentorm.py  6c372a2aaf6b_change_nullability.py  70d0aacbc475_change_nullability_of_articlecontentorm_.py  7146fdf88168_change_column_names_and_add_new_column_.py  a941d05aec0f_init.py  ac86691d366d_add_embedded_at_cols.py  b68e920ac317_add_downloaded_col.py  ba5d0babfeb1_add_embedding_tables.py  bfafb2265065_add_change_nullable_of_ticker.py  d2d9e2b4a7ef_add_is_main.py  d7d3ec2878fc_change_column_name_of_article_table.py  d97e0641bd1e_move_data_to_new_table.py  e3eb1c02cb06_create_research_report.py  f30e11e332a4_change_column_names_is_related_to_is_.py
mm_crawler/database/: models.py  session.py
mm_crawler/spiders/: commons.py  naver_main_news_list.py  naver_news_content.py  naver_news_list.py  naver_news_list_last_year.py  naver_research_list.py
mm_frontend/: Cargo.toml  index.html
mm_frontend/src/: chat.rs  example.rs  main.rs  routes.rs  shared_state.rs  sidebar.rs
mm_frontend_basic/: next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
mm_frontend_basic/src/app/: layout.tsx
mm_frontend_basic/src/app/(main)/@feed/: default.tsx  layout.tsx  page.tsx
mm_frontend_basic/src/app/(main)/@feed/resources/[id]/: page.tsx
mm_frontend_basic/src/app/(main)/@feed/tags/[slug]/: page.tsx
mm_frontend_basic/src/app/(main)/resources/[id]/: page.tsx
mm_frontend_basic/src/components/: empty-page.tsx  feed-resource-card.tsx  feed-resources-list.tsx  pane.tsx  sidebar.tsx  submit-resource-form.tsx
mm_frontend_basic/src/lib/: ga.tsx
mm_frontend_basic/src/lib/supabase/: server.ts
mm_frontend_basic/src/styles/: markdown.module.css
mm_frontend_basic/src/types/: database.types.ts
mm_frontend_pro/: .gitignore  .vercelignore  Cargo.toml
mm_frontend_pro/src/: chat.rs  main.rs  shared_state.rs  sidebar.rs
mm_llm/: chain.py  commons.py  config.py  constant.py  enums.py  generator.py  ingestor.py  models.py  pg_retriever.py  pgvector_retriever.py  searcher.py  spliter.py  supabase.py  vectorstore.py
mm_llm/database/: models.py  session.py
mm_llm/generator/: chain.py  service.py
mm_llm/ingestor/: commons.py  credit_risk_accessment.py  naver_news_article.py  naver_research_report.py  pg_chunk_processor.py  pgvector.py  pgvector_chunk.py
mm_llm/pipeline/: credit_risk_accessment.py
mm_llm/prompt_templates/: default.py
mm_llm/prompts/: default.py
mm_llm/vectorstore/: milvus.py
mm_xing/: auth.py  block.py  config.py  constant.py  res_converter.py  schemas.py
mm_xing/database/: models.py  session.py
mm_xing/tasks/: master.py
tests/: test_session.py
