[tool.poetry]
name = "market_mind"
version = "0.1.0"
description = ""
authors = ["BrianBae <bohblue23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
scrapy = "^2.11.1"
scrapy-fake-useragent = "^1.4.4"
alembic = "^1.13.1"
httpx = "^0.27.2"
aiofiles = {extras = ["typing"], version = "^24.1.0"}
langchain-teddynote = "^0.3.14"
langchain-openai = "^0.2.3"
langchain-community = "^0.3.3"
langchain-core = "^0.3.12"
langsmith = "^0.1.137"
langserve = {extras = ["all"], version = "^0.3.0"}
langchain-upstage = "^0.3.0"
langchain-milvus = "^0.1.7"
langchain-redis = "^0.1.1"
langchainhub = "^0.1.21"
langgraph-checkpoint-sqlite = "^2.0.1"
pymupdf = "^1.24.12"
pandas = "^2.2.3"
streamlit = "^1.40.1"
duckduckgo-search = "^6.3.5"
wikipedia = "^1.4.0"
fastapi = {extras = ["standard"], version = "^0.115.5"}
langchain-anthropic = "^0.3.0"
twisted = {extras = ["asyncio"], version = "^24.10.0"}
playwright = "^1.49.0"
scrapy-playwright = "^0.0.42"
psycopg2 = "^2.9.10"
pytz = "^2024.2"
diskcache = "^5.6.3"
pgvector = "^0.3.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pylint = "^3.3.1"
ruff = "^0.7.4"
mypy = "^1.13.0"
isort = "^5.13.2"
clipboard = "^0.0.4"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
