[package]
name = "mm_frontend_pro"
version = "0.1.0"
edition = "2021"
resolver = "2"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
hello_egui = { version = "0.6.0", features = ["all", "material_icons"] }
hello_egui_utils = { version = "0.6.0" }

# Deps from the hello-egui
egui = { version = "0.29", default-features = false }
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
]}
egui_extras = { version = "0.29", default-features = false }
egui_router = "0.2.0"
ehttp = "0.5.0"
rand = { version = "0.8.5", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
simple-easing = "1"
serde_json = "1"
futures = "0.3"
futures-util = "0.3"
serde = "1"
image = "0.25"
log = "0.4"
# tokio-tungstenite = "0.24"

# Deps from the hello-egui/Fancy-example
thumbhash = "0.1.0"
color-hex = "0.2.0"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
casey = "0.4.0"
egui_commonmark = { version = "0.18.0", features = [] }
validator = { version = "0.19.0", features = ["derive"] }
env_logger = "0.11"

tokio-tungstenite-wasm = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "time", "macros"] }
ureq = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.43"
gloo-timers = { version = "0.3.0", features = ["futures"] }
